# imu_filtro_complementario

./: .gitignore  CMakeLists.txt  README.md  imu_data_callback.cpp  lidarTest.cpp  rs-motion.cpp
complementary_filter/src/: complementary_filter.cpp
rplidar/output/Linux/Release/: simple_grabber  ultra_simple
src/: main.cpp
